<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
    
	<androidx.preference.PreferenceCategory>
        
		<androidx.preference.SwitchPreferenceCompat
			android:key="modeDebug"
			app:iconSpaceReserved="false"
			android:summary="@string/summary_mode_debug"
			android:title="@string/title_mode_debug"
		/>

		<androidx.preference.ListPreference
        	android:key="numberMaxThreadSocks"
			app:iconSpaceReserved="false"
            android:title="@string/title_number_max_threads"
			android:summary="@string/summary_number_max_threads"
			android:defaultValue="8th"
        	android:entries="@array/pref_maxThreads_option_labels"
        	android:entryValues="@array/pref_maxThreads_option_values"
		/>
		
		<androidx.preference.SwitchPreferenceCompat
			android:key="tetherSubnet"
			app:iconSpaceReserved="false"
			android:summary="@string/summary_tethering_subnet"
			android:title="@string/title_tethering_subnet"
		/>
		
		<androidx.preference.SwitchPreferenceCompat
			android:key="disableDelaySSH"
			app:iconSpaceReserved="false"
			android:title="@string/title_disable_delay_ssh"
			android:summary="@string/summary_disable_delay_ssh"
		/>
		
		<androidx.preference.SwitchPreferenceCompat
			android:key="filterApps"
			app:iconSpaceReserved="false"
			android:title="@string/title_filter_apps"
		/>
	
		<androidx.preference.SwitchPreferenceCompat
			android:key="filterBypassMode"
			app:iconSpaceReserved="false"
			android:summary="@string/summary_bypass_modo"
			android:title="@string/title_bypass_mode"
		/>
	
		<androidx.preference.EditTextPreference
            android:key="filterAppsList"
			app:iconSpaceReserved="false"
            android:title="@string/title_apps_list"
            android:summary="@string/summary_apps_list"
            android:dialogMessage=""
			android:singleLine="true"
		/>
		
	</androidx.preference.PreferenceCategory>
    
</androidx.preference.PreferenceScreen>