<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="fill_parent"
     android:orientation="vertical"
     android:theme="@style/AppAlertDialogLogin">

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="#32ffffff"
         android:gravity="center"
         android:orientation="vertical">

        <ImageView
             android:layout_height="155dp"
             android:layout_width="fill_parent"
             android:background="@drawable/vip_login_banner" />

        <TextView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Enter your (VIP) account"
             android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_marginBottom="7dp"
         android:layout_marginLeft="15.0dip"
         android:layout_marginRight="15.0dip"
         ads:cardBackgroundColor="#32ffffff"
         android:layout_marginTop="10dp"
         ads:cardCornerRadius="10.0dip">

        <com.google.android.material.textfield.TextInputLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:hint="@string/auth_username"
                 android:textColor="@color/colorText"
                 android:inputType="text"
                 android:id="@+id/username" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_marginBottom="7dp"
         android:layout_marginLeft="15.0dip"
         android:layout_marginRight="15.0dip"
         ads:cardBackgroundColor="#32ffffff"
         android:layout_marginTop="10dp"
         ads:cardCornerRadius="10.0dip">

        <RelativeLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="4dp"
             android:orientation="horizontal"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/fragment_userpassTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:hint="@string/password"
                     android:textColor="@color/colorText"
                     android:inputType="textPassword"
                     android:id="@+id/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_alignEnd="@id/fragment_userpassTextInputLayout"
                 android:orientation="vertical">

                <ImageButton
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:src="@drawable/ic_visibility_black_24dp"
                     android:hint="@string/show_password"
                     android:tint="@color/colorPrimary"
                     android:id="@+id/show_password"
                     android:layout_gravity="right" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="If you don't have a VIP account, you can \npurchase by clicking Subscription 💜"
         android:textStyle="bold" />

    <CheckBox
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginBottom="16dp"
         android:buttonTint="@color/colorPrimary"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
         android:id="@+id/save_password"
         android:text="@string/save_password" />

</LinearLayout>